[package]
name = "alacritty-opacity"
version = "0.1.0"
authors = ["Minhyeok Lee <minhyeok.lee95@gmail.com>"]
license = "MIT"
description = "A utility to adjust opacity for Alacritty"
homepage = "https://github.com/minhyeoky/alacritty-opacity"
repository = "https://github.com/minhyeoky/alacritty-opacity"
keywords = ["Alacritty", "alacritty", "alacritty-opacity"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
shellexpand = "2.1"
regex = "1.6.0"
